# KeywordManager

./: CMakeLists.txt  clicklabel.cpp  clicklabel.h  keywordlistwidget.cpp  keywordlistwidget.h  keywordtablemodel.cpp  keywordtablemodel.h  mainwindow.cpp  mainwindow.h
build-delegateTrain-Desktop_x86_darwin_generic_mach_o_64bit-Debug/delegateTrain_autogen/: mocs_compilation.cpp
build-delegateTrain-Desktop_x86_darwin_generic_mach_o_64bit-Debug/delegateTrain_autogen/T24IUX3VL4/: qrc_resource.cpp
delegateTrain/: CMakeLists.txt  drawitemdelegate.cpp  drawitemdelegate.h  keyworddataset.cpp  keyworddataset.h  lineeditdelegate.cpp  lineeditdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  masktablemodel.cpp  masktablemodel.cpp.ebCBIC  masktablemodel.h  modelheader.cpp  modelheader.h
delegateTrain/img/: resource.qrc
img/: document_user.jpeg.sb-40550caf-gQaAWD  img.qrc  recycle_bin.jpeg.sb-40550caf-K9t3NF
